syntax = "proto2";

package virtualproto;

import "status.proto";

message ServerBroadcastQuery {
  required string auth = 1;
  required string msg = 2;
}

message ServerBroadcastResult {
  required string auth = 1;
}

message ServerWhisperQuery {
  required string auth = 1;
  required string target = 2;
  required string msg = 3;
}

message ServerWhisperResult {
  required string auth = 1;
}

message ClientSendQuery {
  required string auth = 1;
  required bool is_whisper = 2;
  required string from = 3;
  required string msg = 4;
}

message ClientSendResult {
  required string auth = 1;
}
